force-app/main/default/objects/blng__RevenueSchedule__c/blng__RevenueSchedule__c.object-meta.xml
<CustomObject>
    <customHelpPage>blng__revenueScheduleHelp</customHelpPage>
    <label>Revenue Schedule</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>