force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__Adjustments__c.field-meta.xml
<CustomField>
    <fullName>blng__Adjustments__c</fullName>
    <inlineHelpText>Total of all adjustments made to the Revenue Schedule.</inlineHelpText>
    <label>Adjustments</label>
    <summarizedField>blng__RevenueAdjustmentLine__c.blng__AdjustmentAmount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RevenueAdjustmentLine__c.blng__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RevenueAdjustmentLine__c.blng__TargetRevenueSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>