force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__Available__c.field-meta.xml
<CustomField>
    <fullName>blng__Available__c</fullName>
    <formula>blng__TotalRevenueAmount__c -  (blng__RecognizedRevenueLastClosedPeriod__c +  blng__Unrecognized__c) + blng__Adjustments__c</formula>
    <inlineHelpText>All revenue for a revenue schedule that is available to be adjusted or distributed.</inlineHelpText>
    <label>Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>