force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__BaseCurrencyFXRate__c.field-meta.xml
<CustomField>
    <fullName>blng__BaseCurrencyFXRate__c</fullName>
    <label>Base Currency FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>