force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__BillingFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFinanceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the finance book where this revenue is recorded</inlineHelpText>
    <label>Billing Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>FinanceBookRevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>