force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__BillingFinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>FinancePeriodRevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>