force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__Contract__c.field-meta.xml
<CustomField>
    <fullName>blng__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>ContractRevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>