force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__Deferred__c.field-meta.xml
<CustomField>
    <fullName>blng__Deferred__c</fullName>
    <formula>blng__Unrecognized__c + blng__Available__c</formula>
    <inlineHelpText>Revenue that has not yet been recognized in the Revenue Schedule.</inlineHelpText>
    <label>Deferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>