force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__DeferredBalance__c.field-meta.xml
<CustomField>
    <fullName>blng__DeferredBalance__c</fullName>
    <inlineHelpText>Total unrecognized revenue through the current period</inlineHelpText>
    <label>Deferred Balance (deprecated)</label>
    <summarizedField>blng__RevenueTransaction__c.blng__DeferredBalance__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RevenueTransaction__c.blng__Status__c</field>
        <operation>equals</operation>
        <value>Recognized</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RevenueTransaction__c.blng__RevenueSchedule__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>