force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__EstimatedRevenueTransactionCount__c.field-meta.xml
<CustomField>
    <fullName>blng__EstimatedRevenueTransactionCount__c</fullName>
    <inlineHelpText>Estimated count of revenue transactions</inlineHelpText>
    <label>Estimated Revenue Transaction Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>