force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__FullRecognitionDate__c.field-meta.xml
<CustomField>
    <fullName>blng__FullRecognitionDate__c</fullName>
    <label>Full Recognition Date</label>
    <type>Date</type>
</CustomField>