force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Refers to the legal entity where this revenue is recorded</inlineHelpText>
    <label>Revenue Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>RevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>