force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>blng__OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the order product associated with this revenue schedule</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>OrderProductsRevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>