force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RecognizedRevenueLastClosedPeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__RecognizedRevenueLastClosedPeriod__c</fullName>
    <inlineHelpText>Sum of all revenue that has been recognized through the current period</inlineHelpText>
    <label>Recognized</label>
    <summarizedField>blng__RevenueTransaction__c.blng__RevenueAmount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RevenueTransaction__c.blng__Status__c</field>
        <operation>equals</operation>
        <value>Recognized</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RevenueTransaction__c.blng__RevenueSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>