force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueAgreement__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Agreement</label>
    <referenceTo>blng__RevenueAgreement__c</referenceTo>
    <relationshipLabel>Revenue Schedule</relationshipLabel>
    <relationshipName>RevenueScheduleRevenueAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>