force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueAgreementAllocationStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueAgreementAllocationStatus__c</fullName>
    <label>Revenue Agreement Allocation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>