force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueDistributionMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueDistributionMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>As defined in the revenue recognition rule, the method for calculating how revenue will be spread
        across time periods.</inlineHelpText>
    <label>Revenue Distribution Method</label>
    <referenceTo>blng__RevenueDistributionMethod__c</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>RevenueDistributionMethodRevenueSchedule</relationshipName>
    <type>Lookup</type>
</CustomField>