force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueEndDate__c</fullName>
    <inlineHelpText>Refers to the revenue term end date defined in the revenue rule.</inlineHelpText>
    <label>Revenue End Date</label>
    <type>Date</type>
</CustomField>