force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueExpectedAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueExpectedAmount__c</fullName>
    <inlineHelpText>Total revenue expected in this revenue schedule.</inlineHelpText>
    <label>Revenue Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>