force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueFinanceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Finance Book where this Revenue will be recorded.</inlineHelpText>
    <label>Revenue Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Revenue Schedules</relationshipLabel>
    <relationshipName>RevenueFinanceBookRevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>