force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueRecognitionRule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the revenue recognition rule used for this revenue schedule</inlineHelpText>
    <label>Revenue Recognition Rule</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>Revenue Schedules (Revenue Recognition Rule)</relationshipLabel>
    <relationshipName>RevenueRecRuleRevenueSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>