force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueStartDate__c</fullName>
    <inlineHelpText>Refers to the revenue term start date defined in the revenue rule.</inlineHelpText>
    <label>Revenue Start Date</label>
    <type>Date</type>
</CustomField>