force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__RevenueTransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueTransactionStatus__c</fullName>
    <inlineHelpText>Status of this revenue transaction.</inlineHelpText>
    <label>Revenue Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleStatus</valueSetName>
    </valueSet>
</CustomField>