force-app/main/default/objects/blng__RevenueSchedule__c/fields/blng__Unrecognized__c.field-meta.xml
<CustomField>
    <fullName>blng__Unrecognized__c</fullName>
    <inlineHelpText>Total of all revenue that is distributed to a Revenue Schedule but not yet recognized.</inlineHelpText>
    <label>Unrecognized</label>
    <summarizedField>blng__RevenueTransaction__c.blng__RevenueAmount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RevenueTransaction__c.blng__Status__c</field>
        <operation>notEqual</operation>
        <value>Recognized,Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RevenueTransaction__c.blng__RevenueSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>